# media-metrics-lab

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 14337dfdb30d_set_now_defaults_for_jobs_timestamps.py  316cdaedc63c_add_server_defaults_to_jobs_timestamps.py  61706cec9f1b_create_jobs_and_results.py  9d8f4fe3d3ac_add_source_filename_to_jobs.py  a1b2c3d4e5f6_add_channel_to_results.py  b3e7f1a2c9d0_create_users_table.py  f571937bfcca_init.py
backend/app/: main.py
backend/app/api/: __init__.py  auth.py  jobs.py  routers.py  system.py
backend/app/core/: __init__.py  config.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  job.py  result.py  user.py
backend/app/services/: upload_service.py
backend/app/services/fetchers/: __init__.py  base.py  factory.py  instagram_stub.py  tiktok_stub.py  types.py  youtube_stub.py
backend/app/services/jobs/: export.py  queries.py  service.py
backend/app/services/upload/: __init__.py  service.py  types.py  utils.py  validators.py
backend/app/services/upload/readers/: csv_reader.py  xlsx_reader.py
backend/test/: test_upload_parsing.py
backend/test/fixtures/upload/: invalid_csv.csv  mixed_csv.csv  valid_xlsx.xlsx  ~$valid_xlsx.xlsx
backend/test/fixtures/validation/: invalid_xlsx.xlsx  mixed_xlsx.xlsx  valid_csv.csv
backend/test/fixtures/youtube_smoke/: youtube_smoke.csv  youtube_smoke.xlsx
frontend/: Dockerfile  (+5 more)
(+34 files in other folders)
